[tool.poetry]
name = "langchain-for-llm-application-development"
version = "0.1.0"
description = "LangChain for LLM Application Development"
authors = ["Nitin"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
openai = "^1.44.0"
ipython = "^8.27.0"
ipykernel = "^6.29.5"
langchain = "^0.2.16"
langchain-community = "^0.2.16"
langchain-openai = "^0.1.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
