[tool.poetry]
name = "langchain-for-llm-application-development"
version = "0.1.0"
description = "LangChain for LLM Application Development"
authors = ["Nitin"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
openai = "^1.44.0"
ipython = "^8.27.0"
ipykernel = "^6.29.5"
langchain = "^0.3.3"
langchain-community = "^0.3.2"
ipywidgets = "^8.1.5"
pandas = "^2.2.3"
docarray = "^0.40.0"
langchain-experimental = "^0.3.2"
google-generativeai = "^0.8.3"
langchain-google-genai = "^2.0.1"
numexpr = "^2.10.1"
wikipedia = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
